@@ -1,3 +1,6 @@
+- Add null checks to guard against control panel initialization race condition at load
+
+
 Version 0.9.11 -
 
 - Resequence loading operations
